noch ein commit

--- a/Firmware.tex
+++ b/Firmware.tex
@@ -764,6 +764,7 @@ Durch das frühe Beschäftigen mit möglichen Fehlerquellen wird eine Strategie 
 \end{table}
 
 
+%%%% WAS PASSIERT DANACH ????
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -773,3 +774,4 @@ Durch das frühe Beschäftigen mit möglichen Fehlerquellen wird eine Strategie 
 
   \subsection{Umsetzung}
 
+%%%% WAS PASSIERT DANACH ????
