Glossar and different paragraph

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -103,8 +103,8 @@
 % falls man die erste Zeile der Absätze nicht einrücken will
 % dann sollte man aber etwas mehr Abstand zwischen den Absätzen erlauben
 % Alternative \usepackage{parskip}
-%%\setlength{\parindent}{0pt}
-%%\setlength{\parskip}{1.5ex plus0.5ex minus0.5ex}
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{1.5ex plus0.5ex minus0.5ex}
 % Auch Fußnoten bündig ausrichten
 \deffootnote[]{1em}{1em}{\textsuperscript{\thefootnotemark\ }}
 % Listen etwas wenige einrücken, erfordert enumitem
