--- a/Firmware.tex
+++ b/Firmware.tex
@@ -41,7 +41,7 @@
 
   % BILD mit 4, 6, 8 in + bzw x %
 
-  \subsection{Mögliche Anwendungsgebiete}
+  \subsubsection{Mögliche Anwendungsgebiete}
   Multicopter finden in vielen Bereichen Anwendung. \cite{copterAnwendung}
   \begin{itemize}
     \item Fotographie und Videos / Filmindustrie / Anfertigen von hoch aufgelösten Luftbildkarten
