--- a/diplom.bib
+++ b/diplom.bib
@@ -434,7 +434,14 @@
 }
 %chrisy
 @online{opticalFlow,
-	lastchecked = {2016-03-00},
+	lastchecked = {2016-03-10},
 	url = {http://www.inf.fu-berlin.de/inst/ag-ki/rojas_home/documents/Betreute_Arbeiten/Master-Zetzsche.pdf},
 	title = {Kollisionserkennung für Single-/Multicopter mit Hilfe des Optischen Flusses},
+}
+
+%chrisy
+@online{positionswitch,
+	lastchecked = {2016-03-13},
+	url = {http://www.globe-flight.de/mediafiles/Anleitungen/DJI/Naza_de_v2.11.pdf},
+	title = {NAZA Steuerungsmodul für Multi-Kopter},
 }
