--- a/diplom.bib
+++ b/diplom.bib
@@ -445,3 +445,12 @@
 	url = {http://www.globe-flight.de/mediafiles/Anleitungen/DJI/Naza_de_v2.11.pdf},
 	title = {NAZA Steuerungsmodul für Multi-Kopter},
 }
+
+%chrisy
+@online{akustischeverfahren,
+	lastchecked = {2016-03-13},
+	url = {http://www.messcontrol.de/index.php?id=289},
+	title = {Laufzeitdifferenzverfahren},
+}
+
+
