--- a/Mechanik.tex
+++ b/Mechanik.tex
@@ -45,8 +45,6 @@
 		In solchen Fällen, druckt der Drucker unter diesem Steg Stützmaterial. Basierend auf diesem Stützmaterial, wird dann die gewünschte Form gedruckt.
 		Das Stützmaterial ist so gefertigt, dass man es leicht von dieser abbrechen kann, ohne dass Rückstände zurück bleiben.
 
-		\subsubsection{Materialeigenschaften}
-
 		\subsubsection{Von der Idee zur Anfertigung}
 
 		Die größte Hürde an der Realisierung einer Idee ist, eine CAD Zeichnung zu erstellen. In 3D CAD Programmen wie Creo, SolidWorks, etc. kann man ein Teil konstruieren und dann als STL (Standard Triangulation Language) File abspeichern.
@@ -384,7 +382,7 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.45\textwidth]{Bilder/max_spannung_f0_1_r0_5}
+			\includegraphics[width = 1\textwidth]{Bilder/max_spannung_f0_1_r0_5}
 			\par\end{centering}
 			\caption{max. Spannung bei 0.1 N}
 			\label{max_spannung_f0_1_r0_5}
@@ -460,10 +458,10 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 
 			\begin{figure}[H]
 				\begin{centering}
-					\subfigure[Spannungsverteilung ohne Kerbe\label{spannungsverteilung_ohne_kerbe}]{\includegraphics[width = 0.4\textwidth]{Bilder/spannungsverteilung_ohne_kerbe}}
-					\subfigure[Spannungsverteilung mit Kerbe\label{spannungsverteilung_mit_kerbe}]{\includegraphics[width = 0.4\textwidth]{Bilder/spannungsverteilung_mit_kerbe}}
+					\subfigure[Spannungsverteilung ohne Kerbe\label{spannungsverteilung_ohne_kerbe}]{\includegraphics[width = 0.8\textwidth]{Bilder/spannungsverteilung_ohne_kerbe}}
+					\subfigure[Spannungsverteilung mit Kerbe\label{spannungsverteilung_mit_kerbe}]{\includegraphics[width = 0.6\textwidth]{Bilder/spannungsverteilung_mit_kerbe}}
 				\par\end{centering}
-				\caption{Spannungsverteilung bei Zug und Biegung}
+				\caption[Spannungsverteilung bei Zug und Biegung]{Spannungsverteilung bei Zug und Biegung\cite{spannungsverteilung}}
 				\label{spannungsverteilung_ohne_kerbe}
 			\end{figure}
 
@@ -481,9 +479,9 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.45\textwidth]{Bilder/kerbform}
+			\includegraphics[width = 0.4\textwidth]{Bilder/kerbform}
 			\par\end{centering}
-			\caption{Spannungsverteilung bei verschiedenen Kerbformen}
+			\caption[Spannungsverteilung bei verschiedenen Kerbformen]{Spannungsverteilung bei verschiedenen Kerbformen\cite{kerbformen}}
 			\label{kerbform}
 			\end{figure}
 
