--- a/diplom.bib
+++ b/diplom.bib
@@ -453,4 +453,30 @@
 	title = {Laufzeitdifferenzverfahren},
 }
 
+%alex
+@online{PIXY_Cmu_cam5,
+	lastchecked = {2016-02-26},
+	url = {https://www.google.at/search?q=pixy+cmu+cam5&biw=1366&bih=657&source=lnms&tbm=isch&sa=X&ved=0ahUKEwil8ZDh-JXLAhWmPZoKHfAQAboQ_AUIBigB#tbm=isch&q=pixy+cmucam5+back&imgrc=z8L3am8weM0uVM%3A},
+	title = {PIXY Cam Anschlussbuchse},
+}
 
+%alex
+@online{werte_abs,
+	lastchecked = {2016-03-02},
+	url = {http://webcache.googleusercontent.com/search?q=cache:Iv3t6tuj2zIJ:www.l-kt.de/Werkstoffdatenblaetter/Werkstoffdatenblatt%2520ABS.pdf+&cd=1&hl=de&ct=clnk&gl=at},
+	title = {Werte ABS},
+}
+
+%alex
+@online{spannungsverteilung,
+	lastchecked = {2016-03-05},
+	url = {http://www.uniturm.de/download/getdownloadfile?id=40022&type=dl},
+	title = {Spannungsverteilung bei Zug und Biegung},
+}
+
+%alex
+@online{kerbformen,
+	lastchecked = {2016-03-05},
+	url = {http://www.uniturm.de/download/getdownloadfile?id=40022&type=dl},
+	title = {Spannungsverteilung bei verschiedenen Kerbformen},
+}
